--- a/package.json
+++ b/package.json
@@ -1,30 +1,29 @@
 {
   "name": "node-wot",
-  "private": true,
   "version": "0.3.0-SNAPSHOT.7",
-  "description": "Web of Things implementation based on node.js and typescript (root project)",
-  "main": "dist/main.js",
-  "scripts": {
-    "build": "lerna run build",
-    "prebuild": "npm run bootstrap",
-    "test": "lerna run test",
-    "pretest": "npm run build",
-    "bootstrap": "lerna bootstrap",
-    "link": "lerna-run npm link",
-    "prelink": "npm run build",
-    "codestyle": "lerna run codestyle"
+  "private": true,
+  "description": "W3C Web of Things (WoT) implementation based on Node.js and TypeScript (root project, not published)",
+  "author": "the thingweb community",
+  "license": "W3C-20150513",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/thingweb/node-wot.git"
   },
-  "author": "Johannes Hund (johannes.hund@gmail.com)",
-  "license": "W3C Software License",
   "devDependencies": {
     "lerna": "2.1.1",
     "lerna-run": "0.0.2",
     "typescript": "2.3.2",
     "typescript-standard": "0.3.30"
   },
-  "dependencies": {},
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/thingweb/node-wot.git"
+  "dependencies": { },
+  "scripts": {
+    "bootstrap": "lerna bootstrap",
+    "prebuild": "npm run bootstrap",
+    "build": "lerna run build",
+    "pretest": "npm run build",
+    "test": "lerna run test",
+    "prelink": "npm run build",
+    "link": "lerna-run npm link",
+    "codestyle": "lerna run codestyle"
   }
 }
