--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,25 +1,22 @@
 {
   "name": "@node-wot/cli",
   "version": "0.3.0-SNAPSHOT.7",
+  "description": "servient command line interface",
+  "author": "the thingweb community",
+  "license": "W3C-20150513",
   "files": [
     "dist/"
   ],
-  "description": "servient command line interface",
   "main": "dist/cli.js",
-  "scripts": {
-    "build": "tsc",
-    "codestyle": "standard --pretty"
+  "typings": "dist/cli.d.ts",
+  "bin": {
+    "wot-servient": "dist/cli.js"
   },
-  "author": "the thingweb community",
-  "license": "W3C Software License",
   "devDependencies": {
     "@types/node": "8.0.28",
     "ts-node": "3.3.0",
     "typescript": "2.5.2",
     "typescript-standard": "0.3.30"
-  },
-  "bin": {
-    "wot-servient": "dist/cli.js"
   },
   "dependencies": {
     "wot-typescript-definitions": "0.3.0-SNAPSHOT.8",
@@ -28,5 +25,9 @@
     "@node-wot/binding-http": "0.3.0-SNAPSHOT.7",
     "@node-wot/binding-coap": "0.3.0-SNAPSHOT.7",
     "@node-wot/binding-file": "0.3.0-SNAPSHOT.7"
+  },
+  "scripts": {
+    "build": "tsc",
+    "codestyle": "standard --pretty"
   }
 }
