--- a/packages/node-wot-servient-examples/package.json
+++ b/packages/node-wot-servient-examples/package.json
@@ -1,26 +1,21 @@
 {
   "name": "@node-wot/servient-examples",
   "version": "0.3.0-SNAPSHOT.7",
+  "description": "W3C Web of Things (WoT) example Servients (Raspberry-Pi with Unicorn HAT)",
+  "author": "the thingweb community",
+  "license": "W3C-20150513",
   "files": [
     "dist/"
   ],
-  "description": "Example servient used in raspberry-pi demo with unicornhat",
   "main": "dist/raspberry-servient.js",
-  "scripts": {
-    "build": "tsc",
-    "start": "ts-node src/raspberry-servient.ts",
-    "codestyle": "standard --pretty"
+  "bin": {
+    "raspberry-servient": "dist/raspberry-servient.js"
   },
-  "author": "the thingweb community",
-  "license": "W3C Software License",
   "devDependencies": {
     "@types/node": "8.0.28",
     "ts-node": "3.3.0",
     "typescript": "2.5.2",
     "typescript-standard": "0.3.30"
-  },
-  "bin": {
-    "raspberry-servient": "dist/raspberry-servient.js"
   },
   "dependencies": {
     "wot-typescript-definitions": "0.3.0-SNAPSHOT.8",
@@ -29,5 +24,10 @@
     "@node-wot/binding-coap": "0.3.0-SNAPSHOT.7",
     "@node-wot/binding-http": "0.3.0-SNAPSHOT.7",
     "@node-wot/binding-file": "0.3.0-SNAPSHOT.7"
+  },
+  "scripts": {
+    "build": "tsc",
+    "start": "ts-node src/raspberry-servient.ts",
+    "codestyle": "standard --pretty"
   }
 }
