--- a/packages/node-wot/package.json
+++ b/packages/node-wot/package.json
@@ -1,19 +1,14 @@
 {
   "name": "@node-wot/core",
   "version": "0.3.0-SNAPSHOT.7",
+  "description": "W3C Web of Things (WoT) Servient framework",
+  "author": "the thingweb community",
+  "license": "W3C-20150513",
   "files": [
     "dist/"
   ],
-  "description": "a framework for creating servients (server+client) according the W3C WoT specifications",
   "main": "dist/core.js",
   "typings": "dist/core.d.ts",
-  "scripts": {
-    "test": "mocha --compilers ts:ts-node/register",
-    "build": "tsc",
-    "codestyle": ""
-  },
-  "author": "the thingweb community",
-  "license": "W3C Software License",
   "devDependencies": {
     "@types/chai": "4.0.4",
     "@types/node": "8.0.28",
@@ -25,7 +20,12 @@
     "typescript-standard": "0.3.30"
   },
   "dependencies": {
-    "@node-wot/td-tools": "0.3.0-SNAPSHOT.7",
-    "wot-typescript-definitions": "0.3.0-SNAPSHOT.8"
+    "wot-typescript-definitions": "0.3.0-SNAPSHOT.8",
+    "@node-wot/td-tools": "0.3.0-SNAPSHOT.7"
+  },
+  "scripts": {
+    "build": "tsc",
+    "test": "mocha --compilers ts:ts-node/register",
+    "codestyle": "standard --pretty"
   }
 }
