--- a/packages/binding-file/package.json
+++ b/packages/binding-file/package.json
@@ -1,22 +1,25 @@
 {
   "name": "@node-wot/binding-file",
-  "version": "0.3.0-SNAPSHOT.7",
+  "version": "0.3.0-SNAPSHOT.8",
   "description": "File client protocol binding for node-wot",
   "author": "the thingweb community",
   "license": "W3C-20150513",
+  "repository": "https://github.com/thingweb/node-wot/tree/master/packages/binding-file",
+  "publishConfig": {
+    "access": "public"
+  },
   "files": [
     "dist/"
   ],
   "main": "dist/file.js",
-  "typings": "dist/file.d.ts",
+  "types": "dist/file.d.ts",
   "devDependencies": {
-    "@types/node": "8.0.28",
-    "ts-node": "3.3.0",
+    "@types/node": "9.4.1",
     "typescript": "2.5.2",
     "typescript-standard": "0.3.30"
   },
   "dependencies": {
-    "@node-wot/core": "0.3.0-SNAPSHOT.7"
+    "@node-wot/core": "0.3.0-SNAPSHOT.8"
   },
   "scripts": {
     "build": "tsc",
