--- a/packages/binding-http/package.json
+++ b/packages/binding-http/package.json
@@ -1,30 +1,34 @@
 {
   "name": "@node-wot/binding-http",
-  "version": "0.3.0-SNAPSHOT.7",
+  "version": "0.3.0-SNAPSHOT.8",
   "description": "HTTP client & server protocol binding for node-wot",
   "author": "the thingweb community",
   "license": "W3C-20150513",
+  "repository": "https://github.com/thingweb/node-wot/tree/master/packages/binding-http",
+  "publishConfig": {
+    "access": "public"
+  },
   "files": [
     "dist/"
   ],
   "main": "dist/http.js",
-  "typings": "dist/http.d.ts",
+  "types": "dist/http.d.ts",
   "devDependencies": {
     "@types/chai": "4.0.4",
     "@types/node": "8.0.28",
-    "@types/request-promise": "4.1.41",
-    "chai": "4.1.2",
+    "typescript": "2.5.2",
     "mocha": "3.5.3",
     "mocha-typescript": "1.1.8",
+    "chai": "4.1.2",
+    "ts-node": "3.3.0",
+    "typescript-standard": "0.3.30",
+    "@types/request-promise": "4.1.41",
     "request": "2.79.0",
     "request-promise": "4.2.2",
-    "ts-node": "3.3.0",
-    "typescript": "2.5.2",
-    "typescript-standard": "0.3.30",
-    "@node-wot/td-tools": "0.3.0-SNAPSHOT.7"
+    "@node-wot/td-tools": "0.3.0-SNAPSHOT.8"
   },
   "dependencies": {
-    "@node-wot/core": "0.3.0-SNAPSHOT.7"
+    "@node-wot/core": "0.3.0-SNAPSHOT.8"
   },
   "scripts": {
     "build": "tsc",
