--- a/packages/demo-servients/package.json
+++ b/packages/demo-servients/package.json
@@ -1,20 +1,19 @@
 {
-  "name": "@node-wot/cli",
+  "name": "@node-wot/demo-servients",
   "version": "0.3.0-SNAPSHOT.8",
-  "description": "servient command line interface",
+  "description": "W3C Web of Things (WoT) demo Servients (Raspberry-Pi with Unicorn HAT)",
   "author": "the thingweb community",
   "license": "W3C-20150513",
-  "repository": "https://github.com/thingweb/node-wot/tree/master/packages/cli",
+  "repository": "https://github.com/thingweb/node-wot/tree/master/packages/demo-servients",
   "publishConfig": {
     "access": "public"
   },
   "files": [
     "dist/"
   ],
-  "main": "dist/cli.js",
-  "types": "dist/cli.d.ts",
+  "main": "dist/raspberry-servient.js",
   "bin": {
-    "wot-servient": "dist/cli.js"
+    "raspberry-servient": "dist/raspberry-servient.js"
   },
   "devDependencies": {
     "@types/node": "9.4.1",
@@ -26,13 +25,13 @@
     "wot-typescript-definitions": "0.3.0-SNAPSHOT.8",
     "@node-wot/core": "0.3.0-SNAPSHOT.8",
     "@node-wot/td-tools": "0.3.0-SNAPSHOT.8",
-    "@node-wot/binding-http": "0.3.0-SNAPSHOT.8",
     "@node-wot/binding-coap": "0.3.0-SNAPSHOT.8",
+    "@node-wot/binding-http": "0.3.0-SNAPSHOT.8",
     "@node-wot/binding-file": "0.3.0-SNAPSHOT.8"
   },
   "scripts": {
     "build": "tsc",
-    "start": "ts-node src/cli.ts",
+    "start": "ts-node src/raspberry-servient.ts",
     "codestyle": "standard --pretty"
   }
 }
