--- a/packages/td-tools/package.json
+++ b/packages/td-tools/package.json
@@ -1,22 +1,26 @@
 {
   "name": "@node-wot/td-tools",
-  "version": "0.3.0-SNAPSHOT.7",
+  "version": "0.3.0-SNAPSHOT.8",
   "description": "W3C Web of Things (WoT) Thing Description parser, serializer, and other tools",
   "author": "the thingweb community",
   "license": "W3C-20150513",
+  "repository": "https://github.com/thingweb/node-wot/tree/master/packages/td-tools",
+  "publishConfig": {
+    "access": "public"
+  },
   "files": [
     "dist/"
   ],
   "main": "dist/td-tools.js",
-  "typings": "dist/td-tools.d.ts",
+  "types": "dist/td-tools.d.ts",
   "devDependencies": {
     "@types/chai": "4.0.4",
-    "@types/node": "8.0.28",
-    "chai": "4.1.2",
+    "@types/node": "9.4.1",
+    "typescript": "2.5.2",
     "mocha": "3.5.3",
     "mocha-typescript": "1.1.8",
+    "chai": "4.1.2",
     "ts-node": "3.3.0",
-    "typescript": "2.5.2",
     "typescript-standard": "0.3.30"
   },
   "dependencies": {
