--- a/lerna.json
+++ b/lerna.json
@@ -3,5 +3,10 @@
   "packages": [
     "packages/*"
   ],
-  "version": "independent"
+  "version": "0.3.0-RC.1",
+  "commands": {
+    "publish": {
+      "message": "%s"
+    }
+  }
 }
