--- a/packages/binding-file/package.json
+++ b/packages/binding-file/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@node-wot/binding-file",
-  "version": "0.3.0-SNAPSHOT.8",
+  "version": "0.3.0-RC.1",
   "description": "File client protocol binding for node-wot",
   "author": "the thingweb community",
   "license": "W3C-20150513",
@@ -19,7 +19,7 @@
     "typescript-standard": "0.3.30"
   },
   "dependencies": {
-    "@node-wot/core": "0.3.0-SNAPSHOT.8"
+    "@node-wot/core": "0.3.0-RC.1"
   },
   "scripts": {
     "build": "tsc",
