--- a/packages/binding-http/package.json
+++ b/packages/binding-http/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@node-wot/binding-http",
-  "version": "0.3.0-SNAPSHOT.8",
+  "version": "0.3.0-RC.1",
   "description": "HTTP client & server protocol binding for node-wot",
   "author": "the thingweb community",
   "license": "W3C-20150513",
@@ -25,10 +25,10 @@
     "@types/request-promise": "4.1.41",
     "request": "2.79.0",
     "request-promise": "4.2.2",
-    "@node-wot/td-tools": "0.3.0-SNAPSHOT.8"
+    "@node-wot/td-tools": "0.3.0-RC.1"
   },
   "dependencies": {
-    "@node-wot/core": "0.3.0-SNAPSHOT.8"
+    "@node-wot/core": "0.3.0-RC.1"
   },
   "scripts": {
     "build": "tsc",
