--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@node-wot/core",
-  "version": "0.3.0-SNAPSHOT.8",
+  "version": "0.3.0-RC.1",
   "description": "W3C Web of Things (WoT) Servient framework",
   "author": "the thingweb community",
   "license": "W3C-20150513",
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "wot-typescript-definitions": "0.3.0-SNAPSHOT.8",
-    "@node-wot/td-tools": "0.3.0-SNAPSHOT.8"
+    "@node-wot/td-tools": "0.3.0-RC.1"
   },
   "scripts": {
     "build": "tsc",
