--- a/packages/td-tools/package.json
+++ b/packages/td-tools/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@node-wot/td-tools",
-  "version": "0.3.0-SNAPSHOT.8",
+  "version": "0.3.0-RC.1",
   "description": "W3C Web of Things (WoT) Thing Description parser, serializer, and other tools",
   "author": "the thingweb community",
   "license": "W3C-20150513",
