--- a/lerna.json
+++ b/lerna.json
@@ -3,7 +3,7 @@
   "packages": [
     "packages/*"
   ],
-  "version": "0.3.0-RC.1",
+  "version": "0.3.0",
   "commands": {
     "publish": {
       "message": "%s"
