--- a/packages/binding-http/package.json
+++ b/packages/binding-http/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@node-wot/binding-http",
-  "version": "0.3.0-RC.1",
+  "version": "0.3.0",
   "description": "HTTP client & server protocol binding for node-wot",
   "author": "the thingweb community",
   "license": "W3C-20150513",
@@ -14,21 +14,21 @@
   "main": "dist/http.js",
   "types": "dist/http.d.ts",
   "devDependencies": {
+    "@node-wot/td-tools": "^0.3.0",
     "@types/chai": "4.0.4",
     "@types/node": "8.0.28",
-    "typescript": "2.5.2",
+    "@types/request-promise": "4.1.41",
+    "chai": "4.1.2",
     "mocha": "3.5.3",
     "mocha-typescript": "1.1.8",
-    "chai": "4.1.2",
-    "ts-node": "3.3.0",
-    "typescript-standard": "0.3.30",
-    "@types/request-promise": "4.1.41",
     "request": "2.79.0",
     "request-promise": "4.2.2",
-    "@node-wot/td-tools": "0.3.0-RC.1"
+    "ts-node": "3.3.0",
+    "typescript": "2.5.2",
+    "typescript-standard": "0.3.30"
   },
   "dependencies": {
-    "@node-wot/core": "0.3.0-RC.1"
+    "@node-wot/core": "^0.3.0"
   },
   "scripts": {
     "build": "tsc",
