--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@node-wot/cli",
-  "version": "0.3.0-RC.1",
+  "version": "0.3.0",
   "description": "servient command line interface",
   "author": "the thingweb community",
   "license": "W3C-20150513",
@@ -18,17 +18,17 @@
   },
   "devDependencies": {
     "@types/node": "9.4.1",
-    "typescript": "2.5.2",
     "ts-node": "3.3.0",
+    "typescript": "2.5.2",
     "typescript-standard": "0.3.30"
   },
   "dependencies": {
-    "wot-typescript-definitions": "0.3.0-SNAPSHOT.8",
-    "@node-wot/core": "0.3.0-RC.1",
-    "@node-wot/td-tools": "0.3.0-RC.1",
-    "@node-wot/binding-http": "0.3.0-RC.1",
-    "@node-wot/binding-coap": "0.3.0-RC.1",
-    "@node-wot/binding-file": "0.3.0-RC.1"
+    "@node-wot/binding-coap": "^0.3.0",
+    "@node-wot/binding-file": "^0.3.0",
+    "@node-wot/binding-http": "^0.3.0",
+    "@node-wot/core": "^0.3.0",
+    "@node-wot/td-tools": "^0.3.0",
+    "wot-typescript-definitions": "0.3.0"
   },
   "scripts": {
     "build": "tsc",
