--- a/packages/td-tools/package.json
+++ b/packages/td-tools/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@node-wot/td-tools",
-  "version": "0.3.0-RC.1",
+  "version": "0.3.0",
   "description": "W3C Web of Things (WoT) Thing Description parser, serializer, and other tools",
   "author": "the thingweb community",
   "license": "W3C-20150513",
@@ -16,16 +16,16 @@
   "devDependencies": {
     "@types/chai": "4.0.4",
     "@types/node": "9.4.1",
-    "typescript": "2.5.2",
+    "chai": "4.1.2",
     "mocha": "3.5.3",
     "mocha-typescript": "1.1.8",
-    "chai": "4.1.2",
     "ts-node": "3.3.0",
+    "typescript": "2.5.2",
     "typescript-standard": "0.3.30"
   },
   "dependencies": {
-    "reflect-metadata": "0.1.10",
-    "class-transformer": "0.1.8"
+    "class-transformer": "0.1.8",
+    "reflect-metadata": "0.1.10"
   },
   "scripts": {
     "build": "tsc",
