--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@node-wot/core",
-  "version": "0.4.0-SNAPSHOT.1",
+  "version": "0.4.0-SNAPSHOT.2",
   "description": "W3C Web of Things (WoT) Servient framework",
   "author": "the thingweb community",
   "license": "W3C-20150513",
@@ -24,8 +24,9 @@
     "typescript-standard": "0.3.30"
   },
   "dependencies": {
-    "@node-wot/td-tools": "0.4.0-SNAPSHOT.1",
-    "wot-typescript-definitions": "0.4.0-SNAPSHOT.11"
+    "@node-wot/td-tools": "0.4.0-SNAPSHOT.2",
+    "rxjs": "5.4.3",
+    "wot-typescript-definitions": "0.4.0-SNAPSHOT.12"
   },
   "scripts": {
     "build": "tsc",
