--- a/packages/demo-servients/package.json
+++ b/packages/demo-servients/package.json
@@ -20,12 +20,13 @@
     "typescript-standard": "0.3.30"
   },
   "dependencies": {
-    "@node-wot/binding-coap": "0.4.0-SNAPSHOT.1",
-    "@node-wot/binding-file": "0.4.0-SNAPSHOT.1",
-    "@node-wot/binding-http": "0.4.0-SNAPSHOT.1",
-    "@node-wot/core": "0.4.0-SNAPSHOT.1",
-    "@node-wot/td-tools": "0.4.0-SNAPSHOT.1",
-    "wot-typescript-definitions": "0.4.0-SNAPSHOT.11"
+    "@node-wot/binding-coap": "0.4.0-SNAPSHOT.2",
+    "@node-wot/binding-file": "0.4.0-SNAPSHOT.2",
+    "@node-wot/binding-http": "0.4.0-SNAPSHOT.2",
+    "@node-wot/core": "0.4.0-SNAPSHOT.2",
+    "@node-wot/td-tools": "0.4.0-SNAPSHOT.2",
+    "rxjs": "5.4.3",
+    "wot-typescript-definitions": "0.4.0-SNAPSHOT.12"
   },
   "scripts": {
     "build": "tsc",
