--- a/packages/binding-file/package.json
+++ b/packages/binding-file/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@node-wot/binding-file",
-  "version": "0.4.0-SNAPSHOT.2",
+  "version": "0.4.0-SNAPSHOT.3",
   "description": "File client protocol binding for node-wot",
   "author": "the thingweb community",
   "license": "W3C-20150513",
@@ -19,7 +19,8 @@
     "typescript-standard": "0.3.30"
   },
   "dependencies": {
-    "@node-wot/core": "0.4.0-SNAPSHOT.2"
+    "@node-wot/td-tools": "0.4.0-SNAPSHOT.3",
+    "@node-wot/core": "0.4.0-SNAPSHOT.3"
   },
   "scripts": {
     "build": "tsc",
