--- a/packages/demo-servients/package.json
+++ b/packages/demo-servients/package.json
@@ -11,7 +11,8 @@
   ],
   "main": "dist/raspberry-servient.js",
   "bin": {
-    "raspberry-servient": "dist/raspberry-servient.js"
+    "raspberry-servient": "dist/raspberry-servient.js",
+    "oracle-servient": "dist/oracle-servient.js"
   },
   "devDependencies": {
     "@types/node": "9.4.1",
@@ -26,7 +27,9 @@
     "@node-wot/core": "0.4.0-SNAPSHOT.3",
     "@node-wot/td-tools": "0.4.0-SNAPSHOT.3",
     "rxjs": "5.4.3",
-    "wot-typescript-definitions": "0.4.0-SNAPSHOT.13"
+    "wot-typescript-definitions": "0.4.0-SNAPSHOT.13",
+    "@node-wot/binding-oracle": "0.4.0-SNAPSHOT.3",
+    "iotcs-cls-js": "18.1.5"
   },
   "scripts": {
     "build": "tsc",
