--- a/packages/demo-servients/package.json
+++ b/packages/demo-servients/package.json
@@ -28,8 +28,7 @@
     "@node-wot/td-tools": "0.4.0-SNAPSHOT.3",
     "rxjs": "5.4.3",
     "wot-typescript-definitions": "0.4.0-SNAPSHOT.13",
-    "@node-wot/binding-oracle": "0.4.0-SNAPSHOT.3",
-    "iotcs-cls-js": "18.1.5"
+    "@node-wot/binding-oracle": "0.4.0-SNAPSHOT.3"
   },
   "scripts": {
     "build": "tsc",
