--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build": "lerna run build",
     "pretest": "npm run build",
     "test": "lerna run test",
-    "prelink": "npm run build && npm run unlock",
+    "prelink": "npm run unlock",
     "link": "lerna-run npm link",
     "codestyle": "lerna run codestyle",
     "clean": "lerna clean",
