--- a/lerna.json
+++ b/lerna.json
@@ -3,7 +3,7 @@
   "packages": [
     "packages/*"
   ],
-  "version": "0.4.0-SNAPSHOT.4",
+  "version": "0.4.0",
   "commands": {
     "publish": {
       "message": "%s"
