--- a/packages/binding-coap/package.json
+++ b/packages/binding-coap/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@node-wot/binding-coap",
-  "version": "0.4.0-SNAPSHOT.4",
+  "version": "0.4.0",
   "description": "CoAP client & server protocol binding for node-wot",
   "author": "Eclipse Thingweb <thingweb-dev@eclipse.org> (https://thingweb.io/)",
   "license": "W3C-20150513",
@@ -24,8 +24,8 @@
     "typescript-standard": "0.3.30"
   },
   "dependencies": {
-    "@node-wot/td-tools": "0.4.0-SNAPSHOT.4",
-    "@node-wot/core": "0.4.0-SNAPSHOT.4",
+    "@node-wot/td-tools": "0.4.0",
+    "@node-wot/core": "0.4.0",
     "coap": "0.21.0"
   },
   "scripts": {
