--- a/packages/binding-http/package.json
+++ b/packages/binding-http/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@node-wot/binding-http",
-  "version": "0.4.0-SNAPSHOT.4",
+  "version": "0.4.0",
   "description": "HTTP client & server protocol binding for node-wot",
   "author": "Eclipse Thingweb <thingweb-dev@eclipse.org> (https://thingweb.io/)",
   "license": "W3C-20150513",
@@ -27,8 +27,8 @@
     "typescript-standard": "0.3.30"
   },
   "dependencies": {
-    "@node-wot/td-tools": "0.4.0-SNAPSHOT.4",
-    "@node-wot/core": "0.4.0-SNAPSHOT.4"
+    "@node-wot/td-tools": "0.4.0",
+    "@node-wot/core": "0.4.0"
   },
   "scripts": {
     "build": "tsc",
