--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@node-wot/core",
-  "version": "0.4.0-SNAPSHOT.4",
+  "version": "0.4.0",
   "description": "W3C Web of Things (WoT) Servient framework",
   "author": "Eclipse Thingweb <thingweb-dev@eclipse.org> (https://thingweb.io/)",
   "license": "W3C-20150513",
@@ -24,9 +24,9 @@
     "typescript-standard": "0.3.30"
   },
   "dependencies": {
-    "@node-wot/td-tools": "0.4.0-SNAPSHOT.4",
+    "@node-wot/td-tools": "0.4.0",
     "rxjs": "5.4.3",
-    "wot-typescript-definitions": "0.4.0-SNAPSHOT.14"
+    "wot-typescript-definitions": "0.4.0"
   },
   "scripts": {
     "build": "tsc",
