--- a/packages/demo-servients/package.json
+++ b/packages/demo-servients/package.json
@@ -20,14 +20,14 @@
     "typescript-standard": "0.3.30"
   },
   "dependencies": {
-    "@node-wot/binding-coap": "0.4.0-SNAPSHOT.4",
-    "@node-wot/binding-file": "0.4.0-SNAPSHOT.4",
-    "@node-wot/binding-http": "0.4.0-SNAPSHOT.4",
-    "@node-wot/core": "0.4.0-SNAPSHOT.4",
-    "@node-wot/td-tools": "0.4.0-SNAPSHOT.4",
+    "@node-wot/binding-coap": "0.4.0",
+    "@node-wot/binding-file": "0.4.0",
+    "@node-wot/binding-http": "0.4.0",
+    "@node-wot/core": "0.4.0",
+    "@node-wot/td-tools": "0.4.0",
     "rxjs": "5.4.3",
-    "wot-typescript-definitions": "0.4.0-SNAPSHOT.14",
-    "@node-wot/binding-oracle": "0.4.0-SNAPSHOT.4"
+    "wot-typescript-definitions": "0.4.0",
+    "@node-wot/binding-oracle": "0.4.0"
   },
   "scripts": {
     "build": "tsc",
